[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/UI/MenuButton.tres" type="Theme" id=1]
[ext_resource path="res://res/UI/Stats.tres" type="Theme" id=2]
[ext_resource path="res://scenes/menu/Settings.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/VolumeSl.gd" type="Script" id=4]

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.00392157, 0.00392157, 1 )

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -264.0
margin_right = 96.0
margin_bottom = -228.0
theme = ExtResource( 1 )
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -20.0
margin_right = 125.0
margin_bottom = 20.0

[node name="Volume" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 250.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Volume"]
margin_right = 96.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "Volume"

[node name="VolumeSl" type="HSlider" parent="Control/VBoxContainer/Volume"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 10
min_value = -40.0
max_value = 0.0
script = ExtResource( 4 )

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -56.0
margin_right = -20.0
margin_bottom = -14.0
theme = ExtResource( 1 )
text = "Back"
flat = true

[connection signal="value_changed" from="Control/VBoxContainer/Volume/VolumeSl" to="." method="_on_VolumeSl_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
